# its-friday-k8s-admission-controller

./: LICENSE  README.md
itsfriday/: Chart.yaml  values.yaml
itsfriday/templates/: 00-serviceaccount.yaml  02-service.yaml  99-certwebhook.yaml  NOTES.txt  _helpers.tpl  deployment.yaml
source/: Dockerfile  requirements.txt
source/app/: main.py
source/examplecerts/: tls.key
sourcerust/: .dockerignore  Cargo.toml  Dockerfile  tls.crt
sourcerust/src/: main.rs
