[package]
name = "itsfriday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20.8"
rustls-pemfile = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4.23"
